--- a/src/main/resources/templates/place/place-manage.html
+++ b/src/main/resources/templates/place/place-manage.html
@@ -21,7 +21,7 @@
                                 장소 목록
                             </div>
                             <div class="row bg-white">
-                                <div class="col-5 align-items-center">
+                                <div class="col-5 pb-3 align-items-center">
                                     <div class="row mt-2">
                                         <div class="col pe-0" style="position : relative">
                                             <input type="text" style="border-radius: 0" class="form-control form-input" placeholder="이름 검색" id="word">
@@ -29,9 +29,10 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-3 offset-4 align-items-center text-end">
+                                <div class="col-3 pb-3 offset-4 align-items-center text-end">
                                     <a href="/admin/place/add" class="btn btn-primary add mt-2 sidebarItem fs-6">장소 등록</a>
                                 </div>
+                                <hr>
                             </div>
                             <div class="row" style="height : 70vh">
                                 <table class="table">
@@ -64,7 +65,7 @@
                                 </table>
                             </div>
                             <div class="row mt-4">
-                                <div class="col offset-5">
+                                <div class="col justify-content-center">
                                     <nav aria-label="Page navigation example">
                                         <ul class="pagination">
                                             <li class="page-item">
