--- a/src/main/resources/templates/line/line-manage.html
+++ b/src/main/resources/templates/line/line-manage.html
@@ -98,7 +98,7 @@
                                 </tr>
                                 </thead>
                                 <tbody class="align-middle text-center">
-                                <tr th:each="line : ${lineList.getLineList()}" style="max-height:3vh; cursor: pointer;">
+                                <tr th:each="line : ${lineList.getLineList()}" style="max-height:3vh;">
                                     <td th:text="${line.getLineName()}">Mark</td>
                                     <td th:text="${line.getNodeNameFirst()}">Otto</td>
                                     <td th:text="${line.getNodeNameSecond()}">@mdo</td>
