--- a/src/main/resources/templates/line/line-manage.html
+++ b/src/main/resources/templates/line/line-manage.html
@@ -48,7 +48,7 @@
                                 <div class="row">
                                     <div class="col-2 fs-1 ms-3 ps-2 rounded-4" style="background-color: rgb(163, 230, 53);"><i class="bi bi-clipboard-check" style="color:white;"></i></div>
                                     <div class="col-9 fs-1 ms-2 ps-0 text-center">
-                                        <span class="fs-1">400&nbsp;</span><span class="fs-4" style="color:rgb(203, 213, 225)">경로</span>
+                                        <span class="fs-1" th:text="|${lineSize}| " }> &nbsp;</span><span class="fs-4" style="color:rgb(203, 213, 225)">경로</span>
                                     </div>
                                 </div>
                             </div>
