--- a/src/main/resources/templates/node/node-add.html
+++ b/src/main/resources/templates/node/node-add.html
@@ -57,6 +57,7 @@
                                     </div>
                                 </div>
                                 <div class="row mt-5 mb-4 pt-5 text-end">
+                                    <div class="fs-6 nodeHeader"><span style="color:red">*&nbsp;</span>Google Map API 기준입니다</div>
                                     <div class="fs-6 nodeHeader"><span style="color:red">*&nbsp;</span>파란색 마커로 컨트롤 하십시오</div>
                                     <div class="col">
                                         <button type="submit" class="fs-5 mt-3 btn btn-primary save fontHv">지점 저장</button>
