--- a/src/main/resources/templates/node/node-manage.html
+++ b/src/main/resources/templates/node/node-manage.html
@@ -114,27 +114,12 @@
                             </table>
                         </div>
                         <div class="row mt-4">
-                            <div class="col text-center">
+                            <div class="col">
                                 <nav aria-label="Page navigation example">
-                                    <ul class="pagination justify-content-center">
-                                        <li class="page-item">
-                                            <a class="page-link" href="#" aria-label="Previous">
-                                                <span aria-hidden="true">&laquo;</span>
-                                            </a>
-                                        </li>
-                                        <li class="page-item" style="cursor: pointer" th:each="pageNumber : ${#numbers.sequence(1, nodeList.totalPage)}"
-                                            th:onclick="|location.href='@{/admin/node/list/{pageNumber}(pageNumber= ${pageNumber} -1)}'|"
-                                        ><a class="page-link" th:text="${pageNumber}">1</a></li>
-                                        <li class="page-item">
-<!--                                            th:onclick="|location.href='@{/admin/node/list/{pageNumber}(pageNumber= ${(pageNumber/10+1)*10})}'|">-->
-                                            <a class="page-link" aria-label="Next">
-                                                <span aria-hidden="true">&raquo;</span>
-                                            </a>
-                                        </li>
+                                    <ul class="pagination justify-content-center" id="pagination">
                                     </ul>
                                 </nav>
                             </div>
-
                         </div>
                     </div>
                 </div>
@@ -241,6 +226,48 @@
     function searchConnect(){
         let wordBox = document.getElementById("word");
         window.self.location.href = 'http://localhost:60002/admin/node/search/' + wordBox.value;
+    }
+</script>
+<script th:inline="javascript">
+    const url = window.location.href;
+    const lastSlashIndex = url.lastIndexOf("/");
+    const currentPage = Number(url.substring(lastSlashIndex + 1)) + 1;
+    const totalPage = [[${nodeList.totalPage}]];
+    let paginationHtml = '';
+
+    const totalGroup = Math.ceil(totalPage / 10); // 총 그룹 수 계산
+    let currentGroup = Math.ceil(currentPage / 10); // 현재 페이지의 그룹 번호 계산
+
+    if (currentGroup > 1) {
+        paginationHtml += '<li class="page-item">';
+        paginationHtml += '<a class="page-link" href="#" onclick="changePage(' + ((currentGroup - 1) * 10) + ')">&laquo;</a>';
+        paginationHtml += '</li>';
+    }
+
+    // 현재 그룹의 페이지 링크 생성
+    let startPage = (currentGroup - 1) * 10 + 1;
+    let endPage = Math.min(currentGroup * 10, totalPage);
+    for (let i = startPage; i <= endPage; i++) {
+        paginationHtml += '<li aria-current="page" class="page-item';
+        if (i == currentPage) {
+            paginationHtml += ' active';
+        }
+        paginationHtml += '">';
+        paginationHtml += '<a class="page-link" href="#" onclick="changePage(' + i + ')">' + i + '</a>';
+        paginationHtml += '</li>';
+    }
+
+    // 다음 페이지 그룹 링크 생성
+    if (currentGroup < totalGroup) {
+        paginationHtml += '<li class="page-item">';
+        paginationHtml += '<a class="page-link" href="#" onclick="changePage(' + (currentGroup * 10 + 1) + ')">&raquo;</a>';
+        paginationHtml += '</li>';
+    }
+
+    document.getElementById('pagination').innerHTML = paginationHtml;
+
+    function changePage(pageNumber) {
+        location.href = '/admin/node/list/' + (pageNumber - 1);
     }
 </script>
 </body>
