--- a/src/main/resources/templates/line/line-add.html
+++ b/src/main/resources/templates/line/line-add.html
@@ -36,9 +36,8 @@
                                             <div class="form-floating mb-4">
                                                 <p class="fs-4 nodeHeader">연결노드1 <span class="nodeHeader fs-5"><span style="color:red">*&nbsp;</span>텍스트 입력 칸 클릭 후 마커를 선택하십시오.</span></p>
                                                 <hr>
-                                                <input type="text" th:field="*{nodeNameFirst}" class="small form-control fontHv mt-0 pt-0 fs-6" id="node1" placeholder="name@example.com">
-                                                <input type="hidden" th:field="*{nodeFirstId}" class="small form-control fontHv mt-0 pt-0 fs-6" id="node1Id" placeholder="name@example.com">
-
+                                                <input type="text" th:field="*{nodeNameFirst}" class="small form-control fontHv mt-0 pt-0 fs-6" id="node1">
+                                                <input type="hidden" name="nodeFirstId" class="small form-control fontHv mt-0 pt-0 fs-6" id="node1Id">
                                             </div>
                                         </div>
                                     </div>
@@ -47,8 +46,8 @@
                                             <div class="form-floating mb-4">
                                                 <p class="fs-4 nodeHeader">연결노드2 <span class="nodeHeader fs-5"><span style="color:red">*&nbsp;</span>텍스트 입력 칸 클릭 후 마커를 선택하십시오.</span></p>
                                                 <hr>
-                                                <input type="text" th:field="*{nodeNameSecond}" class="small form-control fontHv mt-0 pt-0 fs-6" id="node2" placeholder="name@example.com">
-                                                <input type="hidden" th:field="*{nodeSecondId}" class="small form-control fontHv mt-0 pt-0 fs-6" id="node2Id" placeholder="name@example.com">
+                                                <input type="text" th:field="*{nodeNameSecond}" class="small form-control fontHv mt-0 pt-0 fs-6" id="node2">
+                                                <input type="hidden" name="nodeSecondId" class="small form-control fontHv mt-0 pt-0 fs-6" id="node2Id">
 
                                             </div>
                                         </div>
@@ -146,7 +145,6 @@
         let end = null;
         let cnt = 0;
 
-        const infoWindow = new google.maps.InfoWindow();
         let nodeList = [[${nodeList}]];
 
         nodeList.forEach(function(data){
@@ -164,6 +162,7 @@
                 content : tag
             });
             markerView.nodeAltitude = data.nodeAltitude;
+            markerView.nodeId = data.nodeId;
 
             document.getElementById("node1").addEventListener("click", function(){
                 inputFocused1=true;
@@ -180,6 +179,7 @@
                     markerView.content = updateTag;
                     document.getElementById("node1").value = markerView.title;
                     document.getElementById("node1Id").value = markerView.nodeId;
+                    alert(markerView.nodeId);
                     inputFocused1=false;
                     start = markerView.position;
                     cnt++;
